--- a/public/js/addBook/addBookTmpl.html
+++ b/public/js/addBook/addBookTmpl.html
@@ -4,11 +4,11 @@
 		<input type="text" ng-model="title" placeholder="title" />
 		<input type="text" ng-model="author" placeholder="author" />
 		<input type="text" ng-model="ISBN" placeholder="ISBN" />
-		<input type="text" ng-model="value" placeholder="value" />
-		<input type="text" ng-model="date_published" placeholder="date_published" />
-		<input type="text" ng-model="date_acquired" placeholder="date_acquired" />
+		<input type="number" ng-model="value" placeholder="value" />
+		<input type="date" ng-model="date_published" />
+		<input type="date" ng-model="date_acquired" />
 		<input type="text" ng-model="was_read" placeholder="was_read" />
-		<input type="text" ng-model="rating" placeholder="rating" />
+		<input type="number" ng-model="rating" placeholder="rating" />
 		<input type="file" accept="image/*" image="image" placeholder="img url" /><!--<img ng-src="{{image.dataURL}}" />-->
 		<input type="text" ng-model="comments" placeholder="comments" />
 	</form>
