--- a/public/index.html
+++ b/public/index.html
@@ -38,12 +38,15 @@
 	<script src="vendor/bootstrap-3.2.0-dist/js/bootstrap.min.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.20/angular-route.js"></script>
+    <script src="vendor/chroma.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/home/homeCtrl.js"></script>
     <script src="js/books/booksCtrl.js"></script>
     <script src="js/books/booksService.js"></script>
     <script src="js/addBook/addBookCtrl.js"></script>
     <script src="js/addBook/addBookService.js"></script>
+    <script src="js/bookDetail/bookDetailCtrl.js"></script>
+    <script src="js/bookDetail/bookDetailService.js"></script>
     <script src="js/directives/imageDirective.js"></script>
 
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
