--- a/public/js/home/homeTmpl.html
+++ b/public/js/home/homeTmpl.html
@@ -2,8 +2,19 @@
 
 <div ng-controller="homeCtrl" class="allContent">
 	<div class="container homeContent">
-		<p class="hoverClick" ng-click="goToItemsPage()">
+		<!--<p class="hoverClick" ng-click="goToItemsPage()">
 			LOAD BOOKSHELF <b class="glyphicon glyphicon-arrow-right"></b>
-		</p>
+		</p>-->
+		<!-- Fix this, set up user account, authentication, etc. -->
+		<form class="form-inline">
+		<div class="form-group">
+			<label class="sr-only" for="inputUsername">Username</label>
+			<input type="text" class="form-control" id="inputUsername" placeholder="Username">
+		</div>
+		<div class="form-group">
+			<label class="sr-only" for="inputPassword">Password</label>
+			<input type="text" class="form-control" id="inputPassword" placeholder="Password">
+		</div>
+	</form>
 	</div>
 </div>
