--- a/public/js/home/homeTmpl.html
+++ b/public/js/home/homeTmpl.html
@@ -2,10 +2,10 @@
 
 <div ng-controller="homeCtrl" class="allContent">
 	<div class="container homeContent">
-		<!--<p class="hoverClick" ng-click="goToItemsPage()">
+		<p class="hoverClick" ng-click="goToItemsPage()">
 			LOAD BOOKSHELF <b class="glyphicon glyphicon-arrow-right"></b>
-		</p>-->
-		<!-- Fix this, set up user account, authentication, etc. -->
+		</p>
+		<!-- Fix this, set up user account, authentication, etc.cd dc -->
 		<form class="form-inline">
 		<div class="form-group">
 			<label class="sr-only" for="inputUsername">Username</label>
