--- a/public/index.html
+++ b/public/index.html
@@ -36,16 +36,19 @@
 
 	<script src="vendor/jquery-1.11.1.js"></script>
 	<script src="vendor/bootstrap-3.2.0-dist/js/bootstrap.min.js"></script>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.js"></script>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.20/angular-route.js"></script>
     <script src="js/app.js"></script>
     <script src="js/home/homeCtrl.js"></script>
+    <script src="js/home/homeService.js"></script>
     <script src="js/books/booksCtrl.js"></script>
     <script src="js/books/booksService.js"></script>
     <script src="js/addBook/addBookCtrl.js"></script>
     <script src="js/addBook/addBookService.js"></script>
     <script src="js/bookDetail/bookDetailCtrl.js"></script>
     <script src="js/bookDetail/bookDetailService.js"></script>
+    <script src="js/users/createAccountCtrl.js"></script>
+    <script src="js/users/createAccountService.js"></script>
     <script src="js/directives/imageDirective.js"></script>
     <script src="js/directives/showErrorsDirective.js"></script>
 
