--- a/public/js/home/homeTmpl.html
+++ b/public/js/home/homeTmpl.html
@@ -7,14 +7,20 @@
 		</p>
 		<!-- Fix this, set up user account, authentication, etc.cd dc -->
 		<form class="form-inline">
-		<div class="form-group">
-			<label class="sr-only" for="inputUsername">Username</label>
-			<input type="text" class="form-control" id="inputUsername" placeholder="Username">
-		</div>
-		<div class="form-group">
-			<label class="sr-only" for="inputPassword">Password</label>
-			<input type="text" class="form-control" id="inputPassword" placeholder="Password">
-		</div>
-	</form>
+			<div class="form-group">
+				<label class="sr-only" for="inputUsername">Username</label>
+				<input type="text" class="form-control" id="inputUsername" placeholder="Username" ng-model="username">
+			</div>
+			<div class="form-group">
+				<label class="sr-only" for="inputPassword">Password</label>
+				<input type="text" class="form-control" id="inputPassword" placeholder="Password" ng-model="password">
+			</div>
+			<button type="button" class="btn btn-primary" ng-click="checkCredentials()">
+				Log In
+			</button> 
+			<button type="button" class="btn btn-link" ng-click="goToCreateAccount()">
+				Create Account
+			</button>
+		</form>
 	</div>
 </div>
