--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,9 @@
 				MY BOOKSHELF
 			</div>
 			<div class="headerRight">
+				<!--
 				<p id="headerRightText">SEARCH</p>
-				<input type="text" class="searchInput"/>
+				<input type="text" class="searchInput"/>-->
 			</div>
 		</div>
 	</div>
