--- a/public/index.html
+++ b/public/index.html
@@ -14,15 +14,11 @@
 
 <body ng-app="myBookshelf">
 	<div class="allContent">
-		<div class="mainHeader">
-			<div class="headerLeft">
+		<div class="mainHeader"></div>
+		<div>
+			<p class="headerLeft">
 				MY BOOKSHELF
-			</div>
-			<div class="headerRight">
-				<!--
-				<p id="headerRightText">SEARCH</p>
-				<input type="text" class="searchInput"/>-->
-			</div>
+			</p>
 		</div>
 	</div>
 
