--- a/public/js/books/booksTmpl.html
+++ b/public/js/books/booksTmpl.html
@@ -12,24 +12,11 @@
 	                </button>
 	                <a class="navbar-brand" href="/">Home</a>
 	            </div>
-	            <!-- Collect the nav links, forms, and other content for toggling -->
 	            <div class="collapse navbar-collapse" id="navigationCollapse">
 	                <ul class="nav navbar-nav">
-	                	<!--
-	                    <li class="dropdown">
-	                    	<a href="" data-toggle="dropdown" class="dropdown-toggle">Sort By<b class="caret"></b></a>
-	                    	<ul class="dropdown-menu">
-	                    	    <li><a href="" ng-click="predicate = 'title'; reverse=!reverse">Title</a></li>
-	                    	    <li><a href="" ng-click="predicate = 'author'; reverse=!reverse">Author</a></li>
-	                    	    <li><a href="" ng-click="predicate = 'date_published'; reverse=!reverse">Date Published</a></li>
-	                    	    <li><a href="" ng-click="predicate = 'date_acquired'; reverse=!reverse">Date Acquired</a></li>
-	                    	    <li><a href="" ng-click="predicate = 'was_read'; reverse=!reverse">Has Been Read</a></li>
-	                    	    <li><a href="" ng-click="predicate = 'rating'; reverse=!reverse">Rating</a></li>
-	                    	    <li><a href="" ng-click="predicate = ''">None</a></li>
-	                    	</ul>
-	                    </li>-->
-	                    <li><a href="/#/books/add-book">Add New Book</a></li>
-
+	                    <li>
+	                    	<a href="/#/books/add-book">Add New Book</a>
+	                    </li>
 	                </ul>
 	            </div><!-- /.navbar-collapse -->
 	        </div>
