--- a/public/js/users/createAccountTmpl.html
+++ b/public/js/users/createAccountTmpl.html
@@ -7,7 +7,7 @@
 		</div>
 		<div class="form-group">
 			<label for="inputPassword">Password</label>
-			<input type="text" class="form-control" id="inputPassword" placeholder="Password" ng-model="password">
+			<input type="password" class="form-control" id="inputPassword" placeholder="Password" ng-model="password">
 		</div>
 		<button type="button" class="btn btn-submit" ng-click="createUser()">
 			Create Account
